# prueba-paquete

./: pyproject.toml
tests/: test_email_sender.py
